--- a/examples/index.html
+++ b/examples/index.html
@@ -28,7 +28,7 @@
 <div class="container">
   <div class="col-md-12 col-lg-10 col-lg-offset-1">
     <div class="page-header">
-      <a class="pull-right" href="https://github.com/mistic100/jQuery-QueryBuilder">
+      <a class="float-right" href="https://github.com/mistic100/jQuery-QueryBuilder">
         <img src="https://assets.github.com/images/icons/emoji/octocat.png" width=48px height=48px>
       </a>
       <h1>jQuery QueryBuilder
