--- a/examples/index.html
+++ b/examples/index.html
@@ -108,6 +108,7 @@
 </div>
 
 <script src="../node_modules/jquery/dist/jquery.js"></script>
+<script src="../node_modules/popper.js/dist/umd/popper.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../node_modules/bootstrap-select/dist/js/bootstrap-select.js"></script>
 <script src="../node_modules/chosenjs/chosen.jquery.js"></script>
