--- a/tests/index.html
+++ b/tests/index.html
@@ -20,6 +20,7 @@
   <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/qunit/qunit/qunit.js"></script>
   <script src="../node_modules/blanket/dist/qunit/blanket.js"></script>
+  <script src="../node_modules/popper.js/dist/umd/popper.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
   <script src="../node_modules/bootstrap-select/dist/js/bootstrap-select.js"></script>
   <script src="../node_modules/chosenjs/chosen.jquery.js"></script>
